Fixed alignment

--- a/me.css
+++ b/me.css
@@ -52,4 +52,6 @@ body{
 	width: 75%;
   	height: 300px;
   	font-family: 'Oswald', sans-serif;
+  	margin-left: auto;
+  	margin-right: auto;
 }
